nvdec: Limit supported h264/5 profiles on the sinkpad caps
Currently nvdec claims to support any possible profile. This is not true, at least with the current implementation. Profiles like h264's high10 are not support for example (also simply because we currently only support outputting 8 bit NV12).
I don't know if there's API for querying from the available card or how to implement this, but the way how it is now the nvdec element is selected by e.g. playbin although the stream is not supported.